# Cadaster

./: .gitignore  README.md  cadastre.py  cadastro.py  database.db  main.py  produto.db  produto.py  recriando_produto.py  register.db  register.py  see_db.py  teste_db.py  ver_dados.py
New folder/src/: main.py
New folder/src/config/: database.py
New folder/src/domain/models/: user.py
New folder/src/domain/service/: user_service.py
cadaster/: pyproject.toml  requirements.txt
cadaster/.github/workflows/: python-ci.yml
cadaster/src/: cadastre.py  car.py  database.py  database_clone.py  main.py  register.py
cadaster/tests/: test_main.py
