[tool.poetry]
name = "cadaster"
version = "0.1.0"
description = "A project for managing cadastre information."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add other dependencies here as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"